k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web-container
        image: swapkats/swadesi:6d1be24
        ports:
        - containerPort: 3000
        command: ["pnpm", "run", "start"]

      #   # env:
      #   # - name: DATABASE_URL
      #   #   value: "postgres://postgres:password@postgres-db:5432/mydb"
      #   volumeMounts:
      #   - name: web
      #     mountPath: /usr/app
      #   command: ["pnpm", "run", "start"]
      # volumes:
      # - name: web
      #   hostPath:
      #     path: /usr/app

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer # Exposes the service outside the cluster, using a LoadBalancer
